(Checking in for jefft@netscape.com). Fixing rtm++ bug 56129. The file input stream wasn't always setting the EOF state correctly, this caused problems with saving mail messages to the sent folder and also problems with 'Save As Draft'. r=ducarroz, r=sspitzer, sr=mscott.